--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.android.bakingapp.activity.DiscoveryActivity" android:launchMode="singleTop">
+        <activity
+            android:name=".activity.DiscoveryActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,16 +21,31 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.android.bakingapp.activity.RecipeDetailsActivity"
-            android:parentActivityName="com.example.android.bakingapp.activity.DiscoveryActivity">
+            android:name=".activity.RecipeDetailsActivity"
+            android:parentActivityName=".activity.DiscoveryActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.android.bakingapp.activity.DiscoveryActivity" />
         </activity>
+
         <provider
-            android:name="com.example.android.bakingapp.data.MoviesProvider"
+            android:name=".data.MoviesProvider"
             android:authorities="com.example.android.bakingapp.data.provider"
-            android:exported="false"/>
+            android:exported="false" />
+
+        <activity
+            android:name=".activity.StepListActivity"
+            android:label="@string/title_step_list"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".activity.StepDetailActivity"
+            android:label="@string/title_step_detail"
+            android:parentActivityName=".activity.StepListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.android.bakingapp.activity.StepListActivity" />
+        </activity>
     </application>
 
 </manifest>
