--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,20 +17,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             // Secret properties
-            applicationVariants.all { variant ->
-                variant.buildConfigField "String", "TMDB_API_KEY", "\"" + secretProps()['TMDB_API_KEY'] + "\""
-            }
+//            applicationVariants.all { variant ->
+//                variant.buildConfigField "String", "TMDB_API_KEY", "\"" + secretProps()['TMDB_API_KEY'] + "\""
+//            }
         }
     }
 }
 
 // Secret properties
 // TO-DO Use Firebase RemoteConfig instead.
-def secretProps() {
-    def Properties props = new Properties()
-    props.load(new FileInputStream(new File('secret.properties')))
-    return props
-}
+//def secretProps() {
+//    def Properties props = new Properties()
+//    props.load(new FileInputStream(new File('secret.properties')))
+//    return props
+//}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -40,21 +40,21 @@ dependencies {
 
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.volley:volley:1.1.0'
-    compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
 
-    compile 'org.parceler:parceler-api:1.1.9'
+    implementation 'org.parceler:parceler-api:1.1.9'
     annotationProcessor 'org.parceler:parceler:1.1.9'
 
     // Room (use 1.1.0-beta1 for latest beta)
-    compile "android.arch.lifecycle:extensions:1.1.1"
-    compile "android.arch.persistence.room:runtime:1.1.0"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
+//    compile "android.arch.lifecycle:extensions:1.1.1"
+//    compile "android.arch.persistence.room:runtime:1.1.0"
+//    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+//    annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
 
     // ExoPlayer
     implementation 'com.google.android.exoplayer:exoplayer:2.7.3'
