JB: Fixed navigation between activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,15 @@
 
         <activity
             android:name=".activity.StepListActivity"
+            android:launchMode="singleTop"
             android:label="@string/title_step_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:parentActivityName=".activity.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.android.bakingapp.activity.MainActivity" />
+        </activity>
+
         <activity
             android:name=".activity.StepDetailActivity"
             android:label="@string/title_step_detail"
