--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "com.example.android.bakingapp"
-        minSdkVersion 15
+        minSdkVersion 14
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -16,22 +16,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
-            // Secret properties
-//            applicationVariants.all { variant ->
-//                variant.buildConfigField "String", "TMDB_API_KEY", "\"" + secretProps()['TMDB_API_KEY'] + "\""
-//            }
         }
     }
 }
-
-// Secret properties
-// TO-DO Use Firebase RemoteConfig instead.
-//def secretProps() {
-//    def Properties props = new Properties()
-//    props.load(new FileInputStream(new File('secret.properties')))
-//    return props
-//}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -63,7 +50,7 @@ dependencies {
     // Espresso IdlingResource
     implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
 
-    // CradView
+    // CardView
     implementation 'com.android.support:cardview-v7:27.1.1'
 
     testImplementation 'junit:junit:4.12'
